# haskell-abtract-nonsense

./: .gitignore  Main.hs  haskell-abstract-nonsense.cabal  stack.yaml
