-- The name of the package.
name:               haskell-abstract-nonsense

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0.0

-- A short (one-line) description of the package.
synopsis:            Play with profunctors, contravariant functors, adjunctions

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             PublicDomain

-- The file containing the license text.
-- license-file:        LICENSE

-- The package author(s).
author:              Sven Heyll

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          sven.heyll@gmail.com

-- A copyright notice.
-- copyright:

category:            System

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable haskell-abstract-nonsense-demo
  main-is: Main.hs
  build-depends: base >= 4.6 && < 5
               , contravariant
               , adjunctions
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-imports
                     -fwarn-unused-binds -fno-warn-unused-do-bind -fno-warn-missing-signatures
